contrib/common/test/static/contrib/jsl/tests/errors/syntax_error_2.js
/*
This failed in cjsl but is working in pyjsl.
http://sourceforge.net/tracker/?func=detail&aid=2861271&group_id=168518&atid=847185
*/
function syntax_error_2() {
    var o = {};
    o.for = 10;
}

